--- a/templates/manifest.json
+++ b/templates/manifest.json
@@ -1,17 +1,50 @@
-{% load static %}
 {
-    "name" : "IQ1OCW",
-    "short_name" : "OCW Light",
-    "description" : "light ocw",
-    "background_color": "#2196f3",
-    "start_url" : "http://localhost:8000",
-    "display" : "standalone",
-    "orientation" : "any",
+    "name": "IQ1OCW",
+    "theme_color": "#01090f",
+    "background_color": "#21d0f3",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/",
     "icons" : [
         {
-            "src" : "/static/image/logo144.png",
-            "sizes" : "any 144x144",
-            "type" : "image/png"
+            "src": "static/icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "static/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
