--- a/templates/manifest.json
+++ b/templates/manifest.json
@@ -24,7 +24,7 @@
         },
         {
             "src": "icons/icon-144x144.png",
-            "src": "{% static 'icons/icon-144x144.png' %}",
+            "src": "{% static "icons/icon-144x144.png" %}",
             "sizes": "144x144",
             "type": "image/png"
         },
